force-app/main/default/objects/Family_Portal_Student__c/Family_Portal_Student__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the Guardian's student information</description>
    <label>Family Portal Student</label>
    <nameField>
        <displayFormat>FPS-{0}</displayFormat>
        <label>Family Portal Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Portal Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>