force-app/main/default/objects/Family_Portal_Student__c/fields/Academic_College__c.field-meta.xml
<CustomField>
    <fullName>Academic_College__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>ASU Academic College name. This option is available to Family Portal Student record with ASU Student enrollment status.</description>
    <label>Academic College</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Portal_Student_College</valueSetName>
    </valueSet>
</CustomField>