force-app/main/default/objects/Family_Portal_Student__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Student College level of study. For example First Year, Second Year, Third year, fourth year, Graduate Student, etc.  This option is available to Family Portal Student record with ASU Student enrollment status.</description>
    <label>Academic Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Portal_Academic_Year</valueSetName>
    </valueSet>
</CustomField>