force-app/main/default/objects/Family_Portal_Student__c/fields/Active_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Active_Relationship__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <defaultValue>true</defaultValue>
    <description>True if the guardian has submitted a relationship to a student, false if the guardian has removed a relationship from a student</description>
    <label>Active Relationship</label>
    <type>Checkbox</type>
</CustomField>