force-app/main/default/objects/Family_Portal_Student__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Student's current Enrollment Status</description>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K-12 Student</fullName>
                <default>true</default>
                <label>K-12 Student</label>
            </value>
            <value>
                <fullName>ASU Student</fullName>
            </value>
            <value>
                <fullName>ASU Alumni</fullName>
            </value>
            <value>
                <fullName>ASU Graduate Student</fullName>
                <isActive>false</isActive>
                <label>ASU Graduate Student</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>