force-app/main/default/objects/Family_Portal_Student__c/fields/Enrollment_Status_Year__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status_Year__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>High School Graduation year for K-12 Student, ASU graduation year for ASU alumni or Expected graduation year for ASU Student</description>
    <label>Enrollment Status Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>