force-app/main/default/objects/Family_Portal_Student__c/fields/Family_Portal_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Family_Portal_Guardian__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Guardian Salesforce id</description>
    <label>Family Portal Guardian</label>
    <referenceTo>Family_Portal_Guardian__c</referenceTo>
    <relationshipLabel>Family Portal Students</relationshipLabel>
    <relationshipName>Family_Portal_Students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>