force-app/main/default/objects/Family_Portal_Student__c/fields/Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact id of the Guardian</description>
    <label>Guardian Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Portal Students</relationshipLabel>
    <relationshipName>Family_Portal_Students</relationshipName>
    <type>Lookup</type>
</CustomField>