force-app/main/default/objects/Family_Portal_Student__c/fields/Military_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Military_Affiliation__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Student's Military Affiliation</description>
    <label>Military Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Military</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>