force-app/main/default/objects/Family_Portal_Student__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Student Type indicates International Student, Transfer Student and Barrett Honors student. This option is available to Family Portal Student record with ASU Student enrollment status.</description>
    <label>Student Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Portal_Student_Types</valueSetName>
    </valueSet>
</CustomField>