force-app/main/default/objects/Family_Portal_Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Guardian_Contact__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Family_Portal_Guardian__c</columns>
    <columns>Active_Relationship__c</columns>
    <columns>Enrollment_Status__c</columns>
    <columns>Enrollment_Status_Year__c</columns>
    <columns>Military_Affiliation__c</columns>
    <columns>Academic_College__c</columns>
    <columns>Type__c</columns>
    <columns>Academic_Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>