force-app/main/default/objects/Family_Portal_Student__c/listViews/dl_all_students.listView-meta.xml
<ListView>
    <fullName>dl_all_students</fullName>
    <columns>NAME</columns>
    <columns>Guardian_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Enrollment_Status__c</columns>
    <columns>Academic_College__c</columns>
    <columns>Academic_Year__c</columns>
    <columns>Type__c</columns>
    <columns>Enrollment_Status_Year__c</columns>
    <columns>Military_Affiliation__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Family_Portal_Guardian__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Active_Relationship__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Relationship__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>*Active students</label>
</ListView>